# m12_ocr

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
docs/: L1_rapport_exploration_sources.md  L2_diagrammes_sequence.md  L4_schema_donnees.md  L7_Plan_Monitoring.md  cartographie_dashboard_sql.md  guide_airflow.md  preuve_requetes.txt  requetes_verification.sql  requetes_verification_BAK.sql  requetes_verification_BAK2.sql  test_adapters_individual.txt  test_airflow tasks test  checkit_etl extraction 2026-07-06.txt  uv_run_src_application_pipeline_service.py.txt
docs/diagrammes/: etape3_transformation.puml  etape4_airflow_dag.puml
scripts/: test_bs4.py  test_feedparser.py  test_requests.py  test_scrapy.py  test_selenium.py
src/adapters/inbound/: airflow_dag.py
src/adapters/outbound/monitoring/: console_dashboard.py  streamlit_dashboard.py  streamlit_dashboard_lite.py
src/adapters/outbound/persistence/: postgresql_adapter.py
src/adapters/outbound/scrapers/: bs4_adapter.py  feedparser_adapter.py  requests_adapter.py  scrapy_adapter.py  selenium_adapter.py
src/application/: monitoring_service.py  pipeline_service.py  transform_service.py
src/domain/: __init__.py  exceptions.py  models.py
src/ports/inbound/: orchestrateur_port.py
src/ports/outbound/: persistence_port.py  scraper_port.py  storage_port.py
src/tools/rafael/: log_tool.py
