[project]
name = "m12-ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "feedparser>=6.0.12",
    "pandas>=3.0.4",
    "praw>=8.0.2",
    "psycopg2-binary>=2.9.12",
    "pymongo>=4.17.0",
    "requests>=2.34.2",
    "scrapy>=2.16.0",
    "selenium>=4.45.0",
    "streamlit>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]
